[project]
name = "medifox-fine-tuned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.36.0",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
]
